# pipes

./: Cargo.toml
src/example1pipes/: main.rs
src/example2pipes/: main.rs
src/example3pipes/: main.rs
src/example4pipes/: main.rs
src/example4pipes/chat/: main.rs
